fixing small bug in student copy

--- a/checkin/views/student.html
+++ b/checkin/views/student.html
@@ -19,7 +19,7 @@
     <h3>You haven't unlocked any entries for the prize drawing yet.</h3>
   {% else %}
     {% if raffle_entries == 1 %}
-      <h3>You've unlocked 1 entry into for prize drawing so far.</h3>
+      <h3>You've unlocked 1 entry for prize drawing so far.</h3>
     {% else %}
       <h3>You've unlocked {{ raffle_entries }} entries for the prize drawing so far.</h3>
     {% endif %}
